# shell-process

./: Cargo.toml  README.md
.github/workflows/: CI.yml
crates/examples/readme/: Cargo.toml
crates/examples/readme/src/: builder.rs  command_ext.rs  pipe.rs  run.rs  run_with_config.rs  run_with_log.rs  try_run.rs
crates/libs/sheller/: Cargo.toml
crates/libs/sheller/src/: debug.rs  lib.rs  macros.rs
crates/tests/default/: Cargo.toml
crates/tests/default/src/: lib.rs
crates/tests/use/: Cargo.toml
crates/tests/use/src/: lib.rs
crates/tools/dev/: Cargo.toml
crates/tools/dev/src/: main.rs
src/: lib.rs
