[package]
name = "example-readme"
version = "0.0.0"
edition.workspace = true

[dependencies]
sheller = { path = "../../libs/sheller" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[bin]]
name = "run"
path = "src/run.rs"

[[bin]]
name = "run_with_log"
path = "src/run_with_log.rs"

[[bin]]
name = "try_run"
path = "src/try_run.rs"

[[bin]]
name = "run_with_config"
path = "src/run_with_config.rs"

[[bin]]
name = "builder"
path = "src/builder.rs"

[[bin]]
name = "command_ext"
path = "src/command_ext.rs"
