[package]
name = "tool-dev"
version = "0.0.0"
edition.workspace = true

[dependencies]
sheller = { path = "../../libs/sheller" }
clap = { version = "4.4.18", features = ["derive", "cargo"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = [
    "user-hooks",
] }
